@@ -3154,17 +3154,6 @@ process_command_line (const int argc, char **argv)
 			cb_stack_size = n;
 			break;
 
-#ifdef COBC_HAS_CUTOFF_FLAG	/* CHECKME: may be removed completely in 3.0 */
-		case 2:
-			/* -fif-cutoff=<xx> : Specify IF cutoff level */
-			n = cobc_deciph_optarg (cob_optarg, 0);
-			if (n < 1 || n > 512) {
-				cobc_err_exit (COBC_INV_PAR, "-fif-cutoff");
-			}
-			cb_if_cutoff = n;
-			break;
-#endif
-
 		case 3:
 			/* -fsign=<ASCII/EBCDIC> : Specify display sign */
 			if (!strcasecmp (cob_optarg, "EBCDIC")) {
