@@ -1,4 +1,7 @@
 
+2020-05-05  Ron Norman <rjn@inglenet.com>
+	* flag.def, cobc.c, codegen.c: removed -fif-cutoff completely
+
 2020-04-27  Ron Norman <rjn@inglenet.com>
 	* codeoptim.def,codeoptim.c: Add COB_A_INLINE to new routines 
 				to convert DISPLAY into binary values
